--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -15,3 +15,6 @@
 @import 'landing/navbar';
 @import 'landing/base';
 @import 'landing/features';
+
+// Include user_registrations#new and user_sessions#new specifics
+@import 'user/base';
