--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,35 @@
 <%
   title t('pages.signup.title')
 %>
+<section class="form">
 <h2>Sign up</h2>
-
-
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%- if resource.errors.any? %>
+  
+  <%- if resource.errors.any? || flash.any? %>
     <div class="alert alert-error">
-      <a class="close" data-dissmiss="alert">x</a>
+      <a class="close" data-dismiss="alert">x</a>
       <%= t('pages.signup.flash.error') %>
     </div>
-  <%- end%>
+  <%- end %>
+
+  <%= render "layouts/form_element", resource: resource, 
+                                         attr: :username,
+                                            f: f           %>
+
+  <%= render "layouts/form_element", resource: resource, 
+                                         attr: :password,
+                                         type: :password_field,
+                                            f: f           %>
+
+  <%= render "layouts/form_element", resource: resource, 
+                                         attr: :password_confirmation,
+                                         type: :password_field,
+                                            f: f           %>
+
   <div>
-    <%= f.label :username %>
-    <br />
-    <%= f.text_field :username %>
+    <%= f.submit "Sign up", disable_with: "Signing up...", class: "btn btn-success btn-block" %>
   </div>
-
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</section>
