--- a/app/views/pages/_features.html.haml
+++ b/app/views/pages/_features.html.haml
@@ -3,16 +3,16 @@
 
     .feature.frankly.span4
       .icon-bookmark
-      %h3 Wait for franks to come you.
+      %h3 Wait for franks come to you.
       %p
         Dont ever mention it.. 
-        While you are away and maybe turding contAT makes your contacts as a valuable franking machine. It's like rainbows! 
+        While you are away and maybe turding, contAT turn your contacts into valuable franking machines. It's like rainbows! 
 
     .feature.turdly.span4
       .icon-cloud
-      %h3 Turding was never as easy before.
+      %h3 Turding was never easy before.
       %p
-        Turding is the hardest thing when you are adding someone to your personal life. Just add contacts that you have just met, and live us the propagation of your battlecry turdings.
+        Turding is the hardest thing when you are adding someone to your personal life. Just add contacts that you have just met, and live us the propagation of your mighty battlecry turdings.
 
     .feature.friendly.span4
       .icon-legal
