--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -1,2 +1,5 @@
-%h1 Contacts#index
-%p Find me in app/views/contacts/index.html.haml
+-# set proper title for contacts page
+- title t('pages.contacts.title')
+
+= render 'contacts/sidebar'
+= render 'contacts/show'
