--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,1 +1,15 @@
 // Application specific styles goes here.
+
+// Include metrostrap;
+@import 'bootstrap';
+
+@import 'responsive';
+
+// Include font awesome for icons
+@import 'font-awesome';
+
+// Include compass framework for handy-stuff
+@import 'compass';
+
+// Include common styles, mixins, and variables
+@import 'common';
