--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -1,5 +1,6 @@
 -# set proper title for contacts page
 - title t('pages.contacts.title')
 
-= render 'contacts/sidebar'
-= render 'contacts/show'
+.row-fluid
+  = render 'contacts/sidebar'
+  = render 'contacts/show'
