--- a/app/assets/stylesheets/contacts.css.scss
+++ b/app/assets/stylesheets/contacts.css.scss
@@ -1,3 +1,22 @@
-// Place all the styles related to the contacts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// Comtacts specific styles goes here.
+
+// @todo extract variables to common/_variables
+$navbar-height: 66px;
+
+
+html { height: 100% }
+body { height: 100% }
+
+nav.navbar {
+  position: absolute;
+   z-index: 10;
+     width: 100%;
+    height: $navbar-height;
+}
+
+.row-fluid { 
+       height: 100%;
+  padding-top: $navbar-height;
+}
+
+@import 'contacts/sidebar';
