user now can create contacts through importing xml file

--- a/app/assets/stylesheets/common/_variables.scss
+++ b/app/assets/stylesheets/common/_variables.scss
@@ -14,3 +14,5 @@ $form-width:   300px;
 $form-padding: 20px;
 
 $light-font-family: 'MetroReg', 'Helvetica Neue', 'Open Sans', 'Proxima Nova', 'Helvetica', 'Arial', sans-serif;
+
+$navbar-height: 66px;
