--- a/app/assets/stylesheets/contacts/sidebar.scss
+++ b/app/assets/stylesheets/contacts/sidebar.scss
@@ -1,25 +1,31 @@
 aside.sidebar {
-      h2, h3, h4, h5 { font-family: $light-font-family; }   
+  h2, h3, h4, h5 { font-family: $light-font-family; }   
 
    max-width: 260px !important;
    min-width: 260px !important;
      padding: $global-padding;
   background: image-url('stressed_linen.png') top left;
       height: 100%; 
-    position: absolute;
+    position: fixed;
+         top: $navbar-height;
+        left: 0;
        color: $white;
 
 
-  header, footer { 
-    position: absolute; 
-       width: 260px; 
-  }
-  
-  header { top:    $global-padding; margin-left: 0; }
-  footer { bottom: $global-padding; margin-left: 0; }
+  header { 
+            top: $global-padding;
+    margin-left: 0;
+       position: absolute; 
+          width: 260px; 
 
-  footer {
-    background: image-url('stressed_linen.png') top left;
+    
+    .add-menu {
+           float: right;
+      margin-top: -6px;
 
+      .add-submenu-btn { margin-left: -5px; }
+      .submenu         { left: auto; right: 0; }
+    }
   }
+
 }
