--- a/app/views/contacts/_sidebar.html.haml
+++ b/app/views/contacts/_sidebar.html.haml
@@ -1,11 +1,4 @@
 %aside.sidebar
-  
-  %header
-    %h4= t('pages.contacts.sidebar.header')
-    %span.contacts-add
-      
+  = render 'contacts/sidebar_header'
   #contacts
    
-  %footer
-    %span.import-xml.btn.btn-warning.btn-block
-      = t('pages.contacts.sidebar.import_xml_button')
