added contact import and single add capability

--- a/app/views/contacts/_flash_messages.html.haml
+++ b/app/views/contacts/_flash_messages.html.haml
@@ -1,4 +1,4 @@
-= if flash.any?
+- if flash.any?
   - flash_class = flash[:alert].present? ? "alert alert-error" : "alert"
   
   %div{ class: flash_class }
