--- a/app/assets/stylesheets/contacts/sidebar.scss
+++ b/app/assets/stylesheets/contacts/sidebar.scss
@@ -28,4 +28,24 @@ aside.sidebar {
     }
   }
 
+  ul#contacts {
+     margin-top: 66px;
+    margin-left: 0;
+     list-style: none;
+     height: 70%;
+     overflow-y: scroll;
+
+    li {
+      margin-bottom: 4px;
+            padding: 10px;
+          font-size: 1.2em;
+
+      &:hover { 
+        background: adjust-lightness($black-background, 6); 
+            cursor: pointer;
+      }
+
+    }
+  }
+
 }
