--- a/app/views/contacts/_sidebar.html.haml
+++ b/app/views/contacts/_sidebar.html.haml
@@ -1,4 +1,8 @@
 %aside.sidebar
   = render 'contacts/sidebar_header'
-  #contacts
+  %ul#contacts
+    It seems you dont have any contacts. 
+    Add one by clicking 'Add' button or
+    import your contacts by clicking
+    Dropdown near 'Add' Button.
    
